# email-triage-env

./: .dockerignore  .gitignore  Dockerfile  README.md  inference.py  openenv.yaml  pyproject.toml  requirements.txt
.github/: copilot-instructions.md
email_triage_env/: __init__.py  client.py  email_generator.py  graders.py  models.py  tasks.py
email_triage_env/server/: __init__.py  app.py  email_triage_environment.py
server/: app.py
